--- a/app/views/layouts/_left_sidebar_modules.erb
+++ b/app/views/layouts/_left_sidebar_modules.erb
@@ -77,8 +77,8 @@
                   <% end %>
                 </p>
               </div>
-      <% if current_user.client == true %>
-            <%= module_header(t "global.module.contact_us", email_icon ) %>
+      <% if current_user.client %>
+            <%= module_header(t "global.module.contact_us" ) %>
             <div class="module">
               <p>
                   <% if Setting::business_phone.present? %><p><img src="/images/telephone.png" hspace="8"><%= Setting::business_phone %><% end %>
