--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,7 +16,7 @@
       <li><a href="#<%= t "products.tab_menu_basic_name" %>" rel="required"><%= (t "products.tab_menu_basic") %></a>
       </li>
       <li><a href="#<%= t "users.tab.contact_info" %>" rel="contact"><%= (t "users.tab.contact_info") %></a></li>
-      <% if can? :manage, :all %>
+      <% if can? :manage, User %>
         <li><a href="#<%= t "users.tab.attributes" %>" rel="attributes"><%= (t "users.tab.attributes") %></a></li>
       <% end %>
 
@@ -55,16 +55,15 @@
               <%= f.button :submit %>
             </div>
     </div>
-            <% if can? :manage, :all %>
+            <% if can? :destroy, User %>
               <div id="attributes" class="tabcontent simple_form">
-
-                  <% if current_user.employee %>
+                  <% if current_user.employee? %>
                       <%= f.input :client, :as => :radio_buttons, :checked => true, :label =>(t "user.client") %>
                       <%= f.input :employee, :as => :radio_buttons, :checked => [true, false], :label =>(t "user.employed") %>
                       <%= f.input :workorder_assignability, :as => :radio_buttons, :checked => [true, false], :label =>(t "user.assignable") %>
                   <% end %>
                   <label class="string required" for="user_role"><abbr title="Required">*</abbr>Role</label>
-                  <%= f.input :role, :collection => [User::ROLES].to_a %>
+                  <%= f.association :role %>
 
 
               <div class="center">
