--- a/app/views/service_rates/index.html.erb
+++ b/app/views/service_rates/index.html.erb
@@ -2,8 +2,8 @@
   <%= module_header %>
   <div class="module">
     <ul>
-        <li class="create"><%= link_to [t "workorder.t_add_new"], new_service_rate_path %></li>
-        <li class="back"><%= link_to (t "global.back"), :back %></li>
+        <li class="create"><%= link_to t("workorder.t_add_new"), new_service_rate_path %></li>
+        <li class="back"><%= link_to t("global.back"), :back %></li>
     </ul>
   </div>
   <%= render 'layouts/left_sidebar_modules' %>
@@ -30,9 +30,9 @@
     <td><%= service_rate.taxable %></td>
     <td><%= number_to_percentage(service_rate.tax_rate) %></td>
     <td><%= service_rate.active %></td>
-    <td width="60"><%= link_to(image_tag('view.png', :title => [t "global.view"]), service_rate )%>
-        <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_service_rate_path(service_rate)) %>
-        <%= link_to(image_tag('trash.png', :title => [t "global.delete"]), service_rate, :confirm => 'Are you sure?', :method => :delete ) %>
+    <td width="60"><%= link_to(image_tag('view.png', :title => t("global.view")), service_rate )%>
+        <%= link_to(image_tag('edit.png', :title => t("global.edit")), edit_service_rate_path(service_rate)) %>
+        <%= link_to(image_tag('trash.png', :title => t("global.delete")), service_rate, :confirm => 'Are you sure?', :method => :delete ) %>
     </td>
   </tr>
 <% end %>
