--- a/app/views/service_rates/_form.html.erb
+++ b/app/views/service_rates/_form.html.erb
@@ -14,7 +14,7 @@
         <% if @service_rate.tax_rate.present? %>
             <%= f.input :tax_rate %>
         <% else %>
-           <%= f.input :tax_rate, :hint => [t "products.hint_tax_rate"] , :input_html => {:value => Setting::tax_rate} %>
+           <%= f.input :tax_rate, :hint => t("products.hint_tax_rate") , :input_html => {:value => Setting::tax_rate} %>
         <% end %>
 
         <%= f.input :active %>
