--- a/app/views/settings/edit.html.erb
+++ b/app/views/settings/edit.html.erb
@@ -1,9 +1,9 @@
-<!--myTODO I18N labels and formats and add full field sets-->
+<!--myTODO Setting Labels not showing up. Also escaping output-->
 <div id="sidebar_left">
   <%= module_header %>
   <div class="module">
     <ul>
-        <li class="exit"><%= link_to([t "global.exit"], root_url) %></li>
+        <li class="exit"><%= link_to t("global.exit"), root_url %></li>
     </ul>
   </div>
   <%= render 'layouts/left_sidebar_modules' %>
@@ -11,8 +11,8 @@
 <div id="center_col">
   <div id="ddtabs1" class="basictab">
   <ul>
-    <li><a href="#<%= t "products.tab_menu_basic_name" %>" rel="sc1"><%= (t "products.tab_menu_basic") %></a></li>
-    <li><a href="#<%= t "settings.tab.taxation_info" %>" rel="sc2"><%= t "settings.tab.taxation_information" %></a></li>
+    <li><a href="#<%= t("products.tab_menu_basic_name") %>" rel="sc1"><%= t("products.tab_menu_basic") %></a></li>
+    <li><a href="#<%= t("settings.tab.taxation_info") %>" rel="sc2"><%= t ("settings.tab.taxation_information") %></a></li>
     <li><a href="#<%= t "settings.tab.payment_options_url" %>" rel="sc3"><%= t "settings.tab.payment_options" %></a></li>
     <li><a href="#<%= t "settings.tab.invoice_defaults_url" %>" rel="sc4"><%= t "settings.tab.invoice_defaults" %></a></li>
     <!--<li><a href="#<%= t "settings.tab.localisation_url" %>" rel="sc5"><%= t "settings.tab.localisation_url" %></a></li>-->
@@ -24,19 +24,14 @@
 
   <div id="sc1" class="tabcontent">
     <div class="simple_form">
-    <%= form_tag({:action => 'edit'}) do %>
-        <p><%= setting_text_field(:business_name, :size => 40)%></p>
-        <p><%= setting_text_field(:business_slogan, :size => 80)%></p>
-        <p><%= setting_text_field(:business_phone, :size => 20)%></p>
-        <p><%= setting_text_field(:business_toll_free, :size => 20)%></p>
-        <p><%= setting_text_field(:business_fax, :size => 20)%></p>
-        <p><%= setting_text_field(:business_mobile, :size => 20)%></p>
-        <p><%= setting_text_field(:business_email, :size => 50)%></p>
-        <p><%= setting_text_area(:business_address, :cols => 35 , :rows => 8)%></p>
-         <div class="center">
-            <%= submit_tag t "global.apply" %>
-         </div>
-         <% end %>
+
+      <%= simple_form_for(@setting) do |f| %>
+        <%= f.input :business_name %>
+
+      <div class="center">
+                  <%= f.input :submit %>
+               </div>
+      <% end %>
     </div>
 
   </div>
