--- a/app/views/users/employees.html.erb
+++ b/app/views/users/employees.html.erb
@@ -1,6 +1,6 @@
 <% if logged_in? %>
     <div id="sidebar_left">
-      <% if can? :manage, @users %>
+      <% if can? :manage, User %>
           <%= module_header %>
           <div class="module">
             <ul>
@@ -21,7 +21,7 @@
               </p>
           <% end %>
       <% end %>
-      <% if can? :manage, @users %>
+      <% if can? :manage, User %>
           <%= will_paginate @users %>
       <% end %>
       <table id="index_table">
@@ -43,14 +43,14 @@
               <td><%= user.name %></td>
               <td align="center"><%= active_work_order_count(user.id).count %></td>
               <td><%= user.username %></td>
-              <td><%= auto_link_email_addresses(user.email).html_safe %></td>
-              <td style="text-transform:capitalize;"><%= user.role %></td>
+              <td><%= user.email %></td>
+              <td style="text-transform:capitalize;"><%= user.role.name %></td>
               <td><%= user.phone %></td>
               <td><%= user.mobile %></td>
               <td><%= user.active %></td>
               <td>
                 <%= link_to(image_tag('view.png', :title => (t "global.view")), user) %>
-                <% if can? :update, @user %>
+                <% if can? :update, User %>
                     &nbsp;<%= link_to(image_tag('edit.png', :title => (t "global.edit")), :controller => "users", :action => "edit", :id => user.id) %>
                 <% end %>
                 <% if user.client? then %>
@@ -58,14 +58,14 @@
                         &nbsp;<%= link_to(image_tag('wrench.png', :title => (t "global.workorder")), :controller => "work_orders", :action => "new", :client_id => user.id) %>
                     <% end %>
                 <% end %>
-                <% if can? :destroy, @user %>
+                <% if can? :destroy, User %>
                     &nbsp;<%= link_to(image_tag('delete.png', :title => (t "global.delete")), user, :confirm => 'Are you sure?', :method => :delete) %>
                 <% end %>
               </td>
             </tr>
         <% end %>
       </table>
-      <% if can? :manage, @users %>
+      <% if can? :manage, User %>
           <%= will_paginate @users %>
       <% end %>
 <% end %>
