--- a/app/views/permissions/_form.html.erb
+++ b/app/views/permissions/_form.html.erb
@@ -3,8 +3,8 @@
 
   <div class="inputs">
     <%= f.input :name %>
-    <%= f.input :action, :collection => %W(read create update destroy administer manage) %>
-    <%= f.input :subject_class, :collection => %W(Invoice Permission PriorityList Product Reply Role ServiceRate Setting Supplier User Users User_Session WorkOrder WorkOrders Employees Clients Profile) %>
+    <%= f.input :action, :collection => %W(read create show index update destroy access_clients manage_profile manage) %>
+    <%= f.input :subject_class, :collection => %W(Invoice Permission PriorityList Product Reply Role ServiceRate Setting Supplier User User_Session WorkOrder WorkOrders Employees Clients Profile) %>
     <%= f.input :subject_id %>
   </div>
 
