--- a/app/views/work_orders/_new_wo_tab.html.erb
+++ b/app/views/work_orders/_new_wo_tab.html.erb
@@ -20,7 +20,7 @@
     <td class="w140" align="center">
         <%= link_to(image_tag('view.png', :title => (t "global.view")), work_order_path(new_wo.id) )%>&nbsp;
         <%= link_to(image_tag('edit.png', :title => (t "global.edit")), edit_work_order_url(new_wo.id)) %>&nbsp;
-      <% if can? :manage, @work_orders %>
+      <% if can? :manage, WorkOrder %>
        <%= link_to(image_tag('printer.png', :title => (t "global.print")), work_order_path(new_wo.id,:format => 'pdf'))%>&nbsp;
        <%= link_to(image_tag('delete.png', :title => ( "global.delete")), work_order_path(new_wo.id), :confirm => (t 'alert.destroy'), :method => :delete ) %>&nbsp;
        <%= link_to(image_tag('tick.png', :title => (t "global.close")), close_path(new_wo.id))%>&nbsp;
