--- a/app/views/work_orders/close.html.erb
+++ b/app/views/work_orders/close.html.erb
@@ -20,10 +20,8 @@
 <div id="sc2" class="tabcontent">
 
 <% simple_form_for(@work_order) do |f| %>
-        <%= ckeditor_tag 'work_order[resolution]', @work_order.resolution, :class => 'ckeditor' %>
+        <%= f.input :resolution %>
         <%= f.input :closed, :input_html => {:checked =>  true} %>
-        <%= f.input :closed_by, :as => :hidden, :input_html => {:value =>  current_user.username} %>
-        <%= f.input :closed_at, :as => :hidden, :input_html => {:value =>  current_user.username} %>
  <div class="center"><%= f.button :submit, 'Close' %></div>
 
 <% end %>
