--- a/app/views/work_orders/_assigned_wo_tab.html.erb
+++ b/app/views/work_orders/_assigned_wo_tab.html.erb
@@ -22,7 +22,7 @@
     <td><%= assigned_wo.assigned_to_username %></td>
     <td width="w140" align="center"><%= link_to(image_tag('view.png', :title => (t "global.view")), work_order_path(assigned_wo.id) )%>&nbsp;
         <%= link_to(image_tag('edit.png', :title => (t "global.edit")), edit_work_order_url(assigned_wo.id)) %>&nbsp;
-      <% if can? :manage, @work_orders %>
+      <% if can? :manage, WorkOrder %>
        <%= link_to(image_tag('printer.png', :title => (t "global.print")), work_order_path(assigned_wo.id,:format => 'pdf'))%>&nbsp;
        <%= link_to(image_tag('delete.png', :title => (t "global.delete")), work_order_path(assigned_wo.id), :confirm => (t 'alert.destroy'), :method => :delete ) %>&nbsp;
        <%= link_to(image_tag('tick.png', :title => (t "global.close")), close_path(assigned_wo.id))%>
